style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
    background: white;
}

@font-face {
    font-family: Poppins;
    src: url(fonts/Poppins.ttf);
}

h1, h2, span, p, a {
    font-family: Poppins, Arial, Helvetica, sans-serif;
}
h1, h2, span, p {
    line-height: 140%;
    transition: font-size 2s, padding 2s;
}

#navigation .toggle-btn{
    cursor: pointer;
    position: absolute;
    left: 225px;
    top: 20px;
    height: 35px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#navigation .toggle-btn div {
    width: 35px;
    height: 6px;
    background-color: #111;
    transition: transform 0.5s, opacity 0.35s;
}

#navigation {
    width: 200px;
    height: 100%;
    background: #151719;
    position: fixed;
    left: -200px;
    top: 0px;
    transition: left 600ms ease-out;
}

#navigation.active {
    left: 0px;
}

#navigation.active .toggle-btn .bar-1 {
    transform: rotate(-45deg) translate(-10px, 10px);
}
#navigation.active .toggle-btn .bar-2 {
    opacity: 0;
}
#navigation.active .toggle-btn .bar-3 {
    transform: rotate(45deg) translate(-10px, -10px);
}

#navigation ul {
    margin-top: 120px;
    font-size: 14pt;
    transition: font-size 2s;
}

#navigation ul li{
    list-style: none;
    padding: 15px 20px 15px 10px;
    border-bottom: 1px solid rgba(100, 100, 100, 0.3);
    text-align: right;
}

#navigation ul li:hover {
    background-color: rgba(100, 100, 100, 0.3);
}

#navigation a {
    display: block;
    width: 100%;
    height: 100%;
    color: rgba(230, 230, 230, 0.9);
    text-decoration: none;
}

#page{
    transition: padding 600ms ease-out;
    background-image: url("images/coding.jpg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}

.container {
    min-height: 100vh;
    background: radial-gradient(rgb(209, 209, 209), rgb(145, 145, 145));
    margin-top: 50vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

.container:first-child{
    margin-top: 0;
}

.caption {
    margin: 50px;
}

.content {
    margin: 20px;
}

.container .caption h1{
    font-size: 52pt;
}

.container div {
    text-align: center;
    max-width: 1200px;
}

#title {
    transform: rotate(-25deg);
}

#title h1 {
    font-size: 60pt;
}

#title hr {
    border: 2px solid black;
}

#title span {
    font-size: 30pt;
}

.container .content {
    font-size: 20pt;
}

html {
    scroll-behavior: smooth;
}

.projects {
    width: 100%;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    align-content: space-between;
    padding-bottom: 20px;
}

.project {
    flex-basis: 44%;
    padding: 30px;
    margin-top: 20px;
    background: #dbd7d2cc;
    border: 1px solid #282C35;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.project h2 {
    font-size: 16pt;
    font-weight: bold;
    text-decoration: underline;
}

.project p {
    margin: 10px 0px;
}

.project img {
    max-height: 400px;
    max-width: 500px;
}

@media screen and (min-width: 801px){
    #page.active{
        padding-left: 200px;
    }
    #navigation ul li:first-of-type{
        border-top: 1px solid rgba(100, 100, 100, 0.3);
    }
}

@media screen and (max-width: 800px){
    #navigation {
        animation-name: sideToTopNavAnim;
        animation-duration: 1.2s;
        animation-iteration-count: 1;
        animation-timing-function: ease-out;
        left: 0px;
        height: initial;
        width: 100%;
        position: sticky;
    }
    #navigation ul {
        margin-top: 0px;
        text-align: center;
    }
    #navigation ul li {
        display: inline-block;
        padding: 15px 20px;
        border: none;
        border-right: 1px solid rgba(100, 100, 100, 0.3);;
    }
    #navigation ul li:first-of-type {
        border-left: 1px solid rgba(100, 100, 100, 0.3);;
    }
    #navigation .toggle-btn {
        display: none;
    }
    #page{
        animation-name: sideToTopPageAnim;
        animation-duration: 1.2s;
        animation-iteration-count: 1;
        animation-timing-function: ease-out;
    }
    .project img {
        max-height: 300px;
        max-width: 375px;
    }
}

@media screen and (max-width: 550px){
    #navigation ul {
        font-size: 11pt;
    }
    #title h1 {
        font-size: 44pt;
    }
    #title span {
        font-size: 24pt;
    }
    .caption h1{
        font-size: 42pt;
    }
    .content p, .content span {
        font-size: 80%;
    }
}

@keyframes sideToTopNavAnim{
    0%{
        top: -48px;
        left: 0px;
        position: fixed;
    }
    100%{
        top: 0px;
        position: fixed;
    }
}

@keyframes sideToTopPageAnim{
    0%{
        padding-top: 0px;
    }
    100%{
        padding-top: 48px;
    }
}

